# lean-coding-agent

./: Cargo.toml  README.md
plugins/: arithmetic.lua  joke.lua  weather.lua  webfetch.lua
src/: agent.rs  api.rs  main.rs  ngram.rs  plugins.rs  tools.rs  ui.rs
