[package]
name = "coding-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
bumpalo = "3"
mlua = { version = "0.10", features = ["lua54", "serialize", "vendored"] }
